--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
 .hidescroll {
   overflow: hidden!important;
 }
+h2{
+  color: whitesmoke;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
